[package]

name = "atom_syndication"
version = "0.1.0"
authors = ["Duncan <duncan@vtllf.org>", "Corey Farwell <coreyf@rwell.org>"]
license = "Apache-2.0"
repository = "https://github.com/vtduncan/rust-atom"
documentation = "https://vtduncan.github.io/rust-atom/atom/index.html"
description = "Library for serializing the Atom web content syndication format"
keywords = ["rss", "atom", "feed", "blog", "web", "news"]
exclude = ["test-data/"]


[dependencies]
RustyXML = "0.1"
