[package]

name = "atom_syndication"
version = "0.1.1"
authors = ["Duncan <duncan@vtllf.org>", "Corey Farwell <coreyf@rwell.org>"]
license = "Apache-2.0"
repository = "https://github.com/vtduncan/rust-atom"
documentation = "https://vtduncan.github.io/rust-atom/atom_syndication/index.html"
description = "Library for serializing the Atom web content syndication format"
keywords = ["rss", "atom", "feed", "blog"]
exclude = ["test-data/*"]


[dependencies]
RustyXML = "0.1"
